# mavsnark

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  mavlink-router.conf
.github/workflows/: ci.yml
src/: app.rs  collector.rs  connection.rs  entries.rs  main.rs  message.rs  scroll.rs
