[package]
name = "mavsnark"
version = "0.1.0"
edition = "2021"
description = "wireshark for mavlink"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/mavsnark"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mavlink = { version = "0.17", features = ["common"] }
colored = "3"
clap = { version = "4", features = ["derive"] }
