[package]
name = "mavsnark"
version = "0.1.0"
edition = "2021"
description = "wireshark for mavlink"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/mavsnark"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mavlink = { version = "0.17", features = ["common"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4.43"
open = "5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
