[package]
name = "mavsnark"
version = "0.2.2"
edition = "2024"
description = "wireshark for mavlink"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/mavsnark"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mavlink = { version = "0.17", features = ["common"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
futures = "0.3"
chrono = "0.4.43"
open = "5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
